Last update for sat.4/18/2020
To be continued...

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
-  <section class="text container">
+  <section class="text container list--process">
     <div class="col-xs-12">
       <img class="avatar-image" src="assets/images/about/meImg.png"/>
       <h1 class="text__h1" style="padding-top:2px">about me</h1>
@@ -50,7 +50,7 @@
 
       <section class="container">
         <div class="container__sec col-xs-12">
-          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
             <ul class="list list--coder text">
               <li class="text__h3 list__title">Part Coder</li>
               <li class="list__elem">Front-end development</li>
@@ -60,10 +60,10 @@
               <li class="list__elem">Sleep deprivation</li>
             </ul>
           </div>
-          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
             <img class="avatar-image pie-img" src="assets/images/about/Pie.png"/>
           </div>
-          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
             <ul class="list list--designer text">
               <li class="text__h3 list__title">Part Designer</li>
               <li class="list__elem">UX design</li>
@@ -88,7 +88,7 @@
       <div class="list--process">
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
         <div class="list--container list--process">
-          <ul class="list__process">
+          <ul class="list__process" style="padding-top:50px; padding-left:3px">
             <li class="text__h3 list__title">Random facts</li>
             <li class="list__elem">God is my everything <3 </li>
               <li class="list__elem">Dancing is my happy place</li>
@@ -104,8 +104,8 @@
     </section>
 
     <section class="container">
-      <div class="container__sec col-xs-12">
-        <h2 class="text__h2"> My Skills</h2>
+      <div class="container__sec col-xs-12 list--process">
+        <h2 class="text__h2" style="padding-right:0px"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
       </div>
     </section>
