--- a/index.html
+++ b/index.html
@@ -1,69 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Final Project for HTML5/CSS3 Course">
-    <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
-    <script src="./assets/javascripts/responsive-nav-bar.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Final Project for HTML5/CSS3 Course">
+  <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
+  <script src="./assets/javascripts/responsive-nav-bar.js"></script>
+</head>
 
-  <body>
+<body>
 
-    <div class="topnav" id="myTopNav">
-      <a class="link topnav__link" href="#icon" style="float:left">LogoIcon</a>
-      <a class="link topnav__link disableClick" style="float:left"> | </a>
-      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav__link" href="#linkedIn icon">in</a>
-      <a class="link topnav__link" href="#emailIcon">email</a>
-      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav__link" href="#sketches">sketches</a>
-      <a class="link topnav__link" href="process.html">process</a>
-      <a class="link topnav__link" href="#projects">projects</a>
-      <a class="link topnav__link" href="about.html">about</a>
-      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+  <div class="topnav" id="myTopNav">
+    <a class="link" href="#icon" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
+    <div class="vertical"></div>
+    <!-- <a class="link topnav__link disableClick vertical" style="float:left"> | </a> -->
+    <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+    <a class="link topnav__link" href="#linkedIn icon">in</a>
+    <a class="link topnav__link" href="#emailIcon">email</a>
+    <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+    <a class="link topnav__link" href="#sketches">sketches</a>
+    <a class="link topnav__link" href="process.html">process</a>
+    <a class="link topnav__link" href="#projects">projects</a>
+    <a class="link topnav__link" href="about.html">about</a>
+    <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+  </div>
+
+  <div>
+    <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
+  </div>
+
+  <div class="anim-text-block" style="width:800px; margin:0 auto;">
+    <div class="line"></div>
+    <div style="display:inline-block;">
+      <h3 class="anim-text">SOME OF MY ANIMATIONS</h3>
     </div>
+    <div class="line"></div>
+  </div>
 
-      <div>
-          <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
-      </div>
+  <div class="vids">
+    <ul>
+      <li>VidSample
+        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+      </li>
+      <li>VidSample
+        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+      </li>
+      <li>VidSample
+        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+      </li>
+    </ul>
+  </div>
 
-      <div class="anim-text-block" style="width:800px; margin:0 auto;">
-        <div class="line"></div>
-        <div style="display:inline-block;">
-          <h3 class="anim-text">SOME OF MY ANIMATIONS</h3>
-        </div>
-        <div class="line"></div>
-      </div>
-
-      <div class="vids">
-        <ul>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-        </ul>
-      </div>
-
-      <footer class="footer">
-        <a class="link footer__link disableClick" style="float:left;
-          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
-          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-        <div class="center-block">
-          <a class="link footer__link" href="#pop-ups">pop-ups</a>
-          <a class="link footer__link" href="#sketches">sketches</a>
-          <a class="link footer__link" href="#process">process</a>
-          <a class="link footer__link" href="#projects">projects</a>
-          <a class="link footer__link" href="#about">about</a>
-        </div>
-      </footer>
-  </body>
+  <footer class="footer">
+    <a class="link footer__link disableClick" style="float:left;
+    color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+    font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+    <div class="center-block">
+      <a class="link footer__link" href="#pop-ups">pop-ups</a>
+      <a class="link footer__link" href="#sketches">sketches</a>
+      <a class="link footer__link" href="#process">process</a>
+      <a class="link footer__link" href="#projects">projects</a>
+      <a class="link footer__link" href="#about">about</a>
+    </div>
+  </footer>
+</body>
 </html>
