--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="topnav" id="myTopNav">
-    <a class="link topnav__link" href="index.html" style="float:left">LogoIcon</a>
+    <a class="link topnav__link" href="index.html" style="float:left">Logo</a>
     <a class="link topnav__link disableClick" style="float:left"> | </a>
     <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
     <a class="link topnav__link" href="#linkedIn icon">in</a>
