--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <div class="topnav" id="myTopNav">
     <a class="link" href="#icon" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
     <div class="vertical"></div>
-    <!-- <a class="link topnav__link disableClick vertical" style="float:left"> | </a> -->
-    <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+    <!-- <a class="link topnav__link disableClick vertical" style="float:left"></a> -->
+    <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
     <a class="link topnav__link" href="#linkedIn icon">in</a>
     <a class="link topnav__link" href="#emailIcon">email</a>
     <a class="link topnav__link" href="#pop-ups">pop-ups</a>
@@ -25,7 +25,7 @@
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="#projects">projects</a>
     <a class="link topnav__link" href="about.html">about</a>
-    <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+    <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
   <div>
