--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="vertical"></div>
     <!-- <a class="link topnav__link disableClick vertical" style="float:left"></a> -->
     <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
-    <a class="link topnav__link" href="#linkedIn icon">in</a>
-    <a class="link topnav__link" href="#emailIcon">email</a>
+    <a class="link topnav__link" id="linkedIn" href="#linkedIn icon">in</a>
+    <a class="link topnav__link" id="email" href="#emailIcon">email</a>
     <a class="link topnav__link" href="#pop-ups">pop-ups</a>
     <a class="link topnav__link" href="#sketches">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
