--- a/process.html
+++ b/process.html
@@ -13,17 +13,17 @@
   <body>
 
       <div class="topnav" id="myTopNav">
-        <a class="link topnav__link" href="index.html" class="active" style="float:left">LogoIcon</a>
-        <a class="link topnav__link disableClick" style="float:left"> | </a>
-        <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
-        <a class="link topnav__link" href="#linkedIn icon">in</a>
-        <a class="link topnav__link" href="#emailIcon">email</a>
+        <a class="link" href="#icon" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
+        <div class="vertical"></div>
+        <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
+        <a class="link topnav__link" id="linkedIn" href="#linkedIn icon">in</a>
+        <a class="link topnav__link" id="email" href="#emailIcon">email</a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
-        <a class="link topnav__link" style="color: #F25D50;" href="process.html">process</a>
+        <a class="link topnav__link" href="process.html">process</a>
         <a class="link topnav__link" href="#projects">projects</a>
         <a class="link topnav__link" href="about.html">about</a>
-        <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+        <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
       </div>
 
     <section>
