--- a/process.html
+++ b/process.html
@@ -16,8 +16,9 @@
         <a class="link" href="#icon" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
         <div class="vertical"></div>
         <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
-        <a class="link topnav__link" id="linkedIn" href="#linkedIn icon">in</a>
-        <a class="link topnav__link" id="email" href="#emailIcon">email</a>
+        <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
+            style="font-size:20px;">&#xf0e1;</a>
+        <a class="link topnav__link fa envelope" id="email" href="#emailIcon" style="font-size:20px;">&#xf0e0;</a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
         <a class="link topnav__link" href="process.html">process</a>
