--- a/process.html
+++ b/process.html
@@ -17,8 +17,8 @@
         <div class="vertical"></div>
         <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
         <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
-            style="font-size:20px;">&#xf0e1;</a>
-        <a class="link topnav__link fa envelope" id="email" href="#emailIcon" style="font-size:20px; position: relative;">&#xf0e0;
+            style="font-size:23px;">&#xf0e1;</a>
+        <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
           <span class="email-text">shandira.ferguson@gmail.com</span></a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
