Projects page added
Basic foundation

--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
 <body>
 
   <div class="topnav" id="myTopNav">
-    <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
-    <div class="vertical"></div>
+    <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a><div class="vertical"></div>
     <a class="link topnav__link disableClick" id="name" style="float:left;" >Shandira Ferguson</a>
-    <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
-        style="font-size:23px;">&#xf0e1;</a>
-    <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
-      <span class="email-text">shandira.ferguson@gmail.com</span></a>
+    <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
+    <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0; <span class="email-text">shandira.ferguson@gmail.com</span></a>
     <a class="link topnav__link" href="#pop-ups">pop-ups</a>
     <a class="link topnav__link" href="#sketches">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
-    <a class="link topnav__link" href="#projects">projects</a>
+    <a class="link topnav__link" href="projects.html">projects</a>
     <a class="link topnav__link" href="about.html">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
