--- a/process.html
+++ b/process.html
@@ -23,7 +23,7 @@
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
         <a class="link topnav__link" href="process.html">process</a>
-        <a class="link topnav__link" href="#projects">projects</a>
+        <a class="link topnav__link" href="projects.html">projects</a>
         <a class="link topnav__link" href="about.html">about</a>
         <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
       </div>
