Projects page additions
Plus other minor changes on other pages

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <a class="link topnav__link" href="#sketches">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
-    <a class="link topnav__link" href="about.html">about</a>
+    <a class="link topnav__link" href="about.html" style="color:#F25D50;">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
