--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
           <span class="email-text">shandira.ferguson@gmail.com</span></a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
-        <a class="link topnav__link" href="process.html">process</a>
+        <a class="link topnav__link" href="process.html" style="color:#F25D50;">process</a>
         <a class="link topnav__link" href="projects.html">projects</a>
         <a class="link topnav__link" href="about.html">about</a>
         <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
