--- a/projects.html
+++ b/projects.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Final Project for HTML5/CSS3 Course">
-    <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
-    <script src="./assets/javascripts/responsive-nav-bar.js"></script>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Final Project for HTML5/CSS3 Course">
+  <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
+  <script src="./assets/javascripts/responsive-nav-bar.js"></script>
+  <!-- lightbox.min.css, jquery.min.js and lightbox.min.js -->
+  <link href="./assets/stylesheets/lightbox.min.css" rel="stylesheet" />
+  <script src="./assets/javascripts/jquery.min.js"></script>
+  <script src="./assets/javascripts/lightbox.min.js"></script>
+</head>
+<body>
 
-      <div class="topnav" id="myTopNav">
-        <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
-        <div class="vertical"></div>
-        <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
-        <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
-            style="font-size:23px;">&#xf0e1;</a>
-        <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
-          <span class="email-text">shandira.ferguson@gmail.com</span></a>
-        <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-        <a class="link topnav__link" href="#sketches">sketches</a>
-        <a class="link topnav__link" href="process.html">process</a>
-        <a class="link topnav__link" href="#projects">projects</a>
-        <a class="link topnav__link" href="about.html">about</a>
-        <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-      </div>
+  <div class="topnav" id="myTopNav">
+    <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
+    <div class="vertical"></div>
+    <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
+    <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
+    style="font-size:23px;">&#xf0e1;</a>
+    <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
+      <span class="email-text">shandira.ferguson@gmail.com</span></a>
+      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+      <a class="link topnav__link" href="#sketches">sketches</a>
+      <a class="link topnav__link" href="process.html">process</a>
+      <a class="link topnav__link" href="#projects" style="color:#F25D50;">projects</a>
+      <a class="link topnav__link" href="about.html">about</a>
+      <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+    </div>
 
     <section>
       <div class="col-xs-12">
@@ -34,49 +38,52 @@
       </div>
     </section>
 
-    <section class="container">
-      <div class="col-xs-12 container__sec">
-        <div class="list--process">
-          <img class="avatar-image process-img" src="assets/images/process/TyImg.png"/>
-          <div class="list--container list--process">
-            <ul class="list__process">
-              <li class="text__h3 list__title">Abstract meets Soul</li>
-              <li class="list__elem">Assignment type</li>
-              <li class="list__elem">Music</li>
-              <li class="list__elem">Software/tools used</li>
-              <li class="list__elem">Course info</li>
-              <li class="list__elem">Instructor</li>
-              <li class="list__elem">Term</li>
-            </ul>
-
-            <ul class="list__process" style="padding-top:59px">
-              <li class="list__elem">Rotoscoping</li>
-              <li class="list__elem">Rough Soul - Gold Link ft. April George</li>
-              <li class="list__elem">Pastel Crayons, Camera, Dragonframe</li>
-              <li class="list__elem">Intro to Film Graphics - Animation</li>
-              <li class="list__elem">Elisabeth Mann</li>
-              <li class="list__elem">Spring 2017</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section>
-      <div class="col-xs-12" style="padding: 0%">
-      <footer class="footer">
-        <a class="link footer__link disableClick" style="float:left;
-          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
-          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-        <div class="center-block">
-          <a class="link footer__link" href="#pop-ups">pop-ups</a>
-          <a class="link footer__link" href="#sketches">sketches</a>
-          <a class="link footer__link" href="#process">process</a>
-          <a class="link footer__link" href="#projects">projects</a>
-          <a class="link footer__link" href="#about">about</a>
-        </div>
-      </footer>
+      [TODO: put your image content here]
+      <div class="media-list">
+        <div class="media-card-wrapper">
+          <a class="media-card" href="./assets/images/media/[TODO: put your image 1 here]" datalightbox="[
+          TODO: create a name for your lightbox, same name for all data-lightbox attribute, e.g. “baby-animal”]">
+          <img src="./assets/images/media/[TODO: put your image 1 here]" />
+        </a>
       </div>
-    </section>
-  </body>
+      <div class="media-card-wrapper">
+        <a class="media-card" href="./assets/images/media/[TODO: put your image 2 here]" datalightbox="[
+        TODO: create a name for your lightbox, same name for all data-lightbox attribute, e.g. “baby-animal”]">
+        <img src="./assets/images/media/[TODO: put your image 2 here]" />
+      </a>
+    </div>
+    <div class="media-card-wrapper">
+      [TODO: repeat <a><img/></a> for your image 3 here]
+    </div>
+    [TODO: repeat <div class=”media-card-wrapper”><a><img/></a></div> for all your images here]
+  </div>
+</section>
+
+[TODO: put video content here]
+<div class="media-list">
+  <!-- Your YouTube Video embedded links look similar to this -->
+  <!-- https://www.youtube.com/embed/mRXajaA14yk -->
+  <iframe width="500" height="315" src="[TODO: put your YouTube video embedded link here]"
+  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  [TODO: repeat <iframe></iframe> to put all your YouTube video embedded link here]
+</div>
+
+<section>
+  <div class="col-xs-12" style="padding: 0%">
+    <footer class="footer">
+      <a class="link footer__link disableClick" style="float:left;
+      color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+      font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+      <div class="center-block">
+        <a class="link footer__link" href="#pop-ups">pop-ups</a>
+        <a class="link footer__link" href="#sketches">sketches</a>
+        <a class="link footer__link" href="#process">process</a>
+        <a class="link footer__link" href="#projects">projects</a>
+        <a class="link footer__link" href="#about">about</a>
+      </div>
+    </footer>
+  </div>
+</section>
+</body>
 </html>
