Projects page edits++
Images added + other page fixes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
+    <img class="animated-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif">
   </div>
 
   <div class="anim-text-block" style="width:800px; margin:0 auto;">
