--- a/process.html
+++ b/process.html
@@ -30,7 +30,7 @@
 
     <section>
       <div class="col-xs-12">
-        <img class="process-headline-img" src="assets/images/process/ProcessImgHeader.png"/>
+        <img class="headline-img" src="assets/images/process/ProcessImgHeader.png"/>
       </div>
     </section>
 
