--- a/projects.html
+++ b/projects.html
@@ -34,29 +34,53 @@
 
     <section>
       <div class="col-xs-12">
-        <img class="process-headline-img" src="assets/images/projects/projects-headline.png"/>
+        <img class="headline-img" src="./assets/images/projects/projects-headline.png"/>
       </div>
     </section>
 
-    <section>
-      [TODO: put your image content here]
+    <section class="img-section">
+      <h2 class="text__h2 proj-subtitles">Images</h2>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="./assets/images/media/[TODO: put your image 1 here]" datalightbox="[
-          TODO: create a name for your lightbox, same name for all data-lightbox attribute, e.g. “baby-animal”]">
-          <img src="./assets/images/media/[TODO: put your image 1 here]" />
-        </a>
+          <a class="media-card" href="assets/images/projects/proj-img-1.png" datalightbox="proj-images">
+            <img src="./assets/images/projects/proj-img-1-thumbnail.png" />
+          </a>
       </div>
       <div class="media-card-wrapper">
-        <a class="media-card" href="./assets/images/media/[TODO: put your image 2 here]" datalightbox="[
-        TODO: create a name for your lightbox, same name for all data-lightbox attribute, e.g. “baby-animal”]">
-        <img src="./assets/images/media/[TODO: put your image 2 here]" />
+        <a class="media-card" href="./assets/images/projects/proj-img-2.png" datalightbox="proj-images">
+          <img src="./assets/images/projects/proj-img-2-thumbnail.png" />
+        </a>
+    </div>
+    <div class="media-card-wrapper">
+      <a class="media-card" href="./assets/images/projects/proj-img-3.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-3-thumbnail.png" />
       </a>
     </div>
     <div class="media-card-wrapper">
-      [TODO: repeat <a><img/></a> for your image 3 here]
+      <a class="media-card" href="./assets/images/projects/proj-img-4.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-4-thumbnail.png" />
+      </a>
     </div>
-    [TODO: repeat <div class=”media-card-wrapper”><a><img/></a></div> for all your images here]
+    <div class="media-card-wrapper">
+      <a class="media-card" href="./assets/images/projects/proj-img-5.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-5-thumbnail.png" />
+      </a>
+    </div>
+    <div class="media-card-wrapper">
+      <a class="media-card" href="./assets/images/projects/proj-img-6.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-6-thumbnail.png" />
+      </a>
+    </div>
+    <div class="media-card-wrapper">
+      <a class="media-card" href="./assets/images/projects/proj-img-7.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-7-thumbnail.png" />
+      </a>
+    </div>
+    <div class="media-card-wrapper">
+      <a class="media-card" href="./assets/images/projects/proj-img-8.png" datalightbox="proj-images">
+        <img src="./assets/images/projects/proj-img-8-thumbnail.png" />
+      </a>
+    </div>
   </div>
 </section>
 
