Project page additions
Video framework added

--- a/projects.html
+++ b/projects.html
@@ -84,14 +84,22 @@
   </div>
 </section>
 
-[TODO: put video content here]
-<div class="media-list">
-  <!-- Your YouTube Video embedded links look similar to this -->
-  <!-- https://www.youtube.com/embed/mRXajaA14yk -->
-  <iframe width="500" height="315" src="[TODO: put your YouTube video embedded link here]"
-  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  [TODO: repeat <iframe></iframe> to put all your YouTube video embedded link here]
-</div>
+<section class="img-section" style="padding-top:0px;">
+  <h2 class="text__h2 proj-subtitles">Videos</h2>
+  <div class="media-list">
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+</section>
 
 <section>
   <div class="col-xs-12" style="padding: 0%">
