Projects page mods
Slight changes

--- a/index.html
+++ b/index.html
@@ -38,18 +38,15 @@
     <div class="line"></div>
   </div>
 
-  <div class="vids">
-    <ul>
-      <li>VidSample
-        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-      </li>
-      <li>VidSample
-        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-      </li>
-      <li>VidSample
-        <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-      </li>
-    </ul>
+  <div class="media-list">
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
   <footer class="footer">
