--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="topnav" id="myTopNav">
     <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a><div class="vertical"></div>
-    <a class="link topnav__link disableClick" id="name" style="float:left;" >Shandira Ferguson</a>
+    <a class="link topnav__link topnav__name disableClick" id="name" style="float:left;">Shandira Ferguson</a>
     <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
     <a class="link topnav__link" href="#pop-ups">pop-ups</a>
@@ -38,7 +38,7 @@
     <div class="line"></div>
   </div>
 
-  <div class="media-list">
+  <div class="media-list" style="padding: 0px 3%;">
     <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
     frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
