--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
   <script src="./assets/javascripts/responsive-nav-bar.js"></script>
-  <!-- lightbox.min.css, jquery.min.js and lightbox.min.js -->
   <link href="./assets/stylesheets/lightbox.min.css" rel="stylesheet" />
   <script src="./assets/javascripts/jquery.min.js"></script>
   <script src="./assets/javascripts/lightbox.min.js"></script>
@@ -19,7 +18,7 @@
   <div class="topnav" id="myTopNav">
     <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/logo@2x.png"></a>
     <div class="vertical"></div>
-    <a class="link topnav__link disableClick" id="name" style="float:left" >Shandira Ferguson</a>
+    <a class="link topnav__link topnav__name disableClick" id="name" style="float:left" >Shandira Ferguson</a>
     <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
     style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
@@ -33,13 +32,13 @@
     </div>
 
     <section>
-      <div class="col-xs-12">
+      <div class="col-xs-12" style="box-shadow:none">
         <img class="headline-img" src="./assets/images/projects/projects-headline.png"/>
       </div>
     </section>
 
     <section class="img-section">
-      <h2 class="text__h2 proj-subtitles">Images</h2>
+      <h2 class="text__h2 proj-subtitles">Still captures</h2>
       <div class="media-list">
         <div class="media-card-wrapper">
           <a class="media-card" href="assets/images/projects/proj-img-1.png" datalightbox="proj-images">
@@ -85,8 +84,8 @@
 </section>
 
 <section class="img-section" style="padding-top:0px;">
-  <h2 class="text__h2 proj-subtitles">Videos</h2>
-  <div class="media-list">
+  <h2 class="text__h2 proj-subtitles">Final products</h2>
+  <div class="media-list" style="box-shadow:none">
     <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
     frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
