--- a/process.html
+++ b/process.html
@@ -41,12 +41,12 @@
           <div class="list--container list--process">
             <ul class="list__process">
               <li class="text__h3 list__title">Abstract meets Soul</li>
-              <li class="list__elem">Assignment type</li>
-              <li class="list__elem">Music</li>
-              <li class="list__elem">Software/tools used</li>
-              <li class="list__elem">Course info</li>
-              <li class="list__elem">Instructor</li>
-              <li class="list__elem">Term</li>
+              <li class="list__elem process__topics">Assignment type</li>
+              <li class="list__elem process__topics">Music</li>
+              <li class="list__elem process__topics">Software/tools used</li>
+              <li class="list__elem process__topics">Course info</li>
+              <li class="list__elem process__topics">Instructor</li>
+              <li class="list__elem process__topics">Term</li>
             </ul>
 
             <ul class="list__process" style="padding-top:59px">
@@ -69,12 +69,12 @@
           <div class="list--container list--process">
             <ul class="list__process">
               <li class="text__h3 list__title">King of Reggae</li>
-              <li class="list__elem">Assignment type</li>
-              <li class="list__elem">Music</li>
-              <li class="list__elem">Software/tools used</li>
-              <li class="list__elem">Course info</li>
-              <li class="list__elem">Instructor</li>
-              <li class="list__elem">Term</li>
+              <li class="list__elem process__topics">Assignment type</li>
+              <li class="list__elem process__topics">Music</li>
+              <li class="list__elem process__topics">Software/tools used</li>
+              <li class="list__elem process__topics">Course info</li>
+              <li class="list__elem process__topics">Instructor</li>
+              <li class="list__elem process__topics">Term</li>
             </ul>
 
             <ul class="list__process" style="padding-top:59px">
@@ -97,12 +97,12 @@
           <div class="list--container list--process">
             <ul class="list__process">
               <li class="text__h3 list__title">Boogie babies</li>
-              <li class="list__elem">Assignment type</li>
-              <li class="list__elem">Music</li>
-              <li class="list__elem">Software/tools used</li>
-              <li class="list__elem">Course info</li>
-              <li class="list__elem">Instructor</li>
-              <li class="list__elem">Term</li>
+              <li class="list__elem process__topics">Assignment type</li>
+              <li class="list__elem process__topics">Music</li>
+              <li class="list__elem process__topics">Software/tools used</li>
+              <li class="list__elem process__topics">Course info</li>
+              <li class="list__elem process__topics">Instructor</li>
+              <li class="list__elem process__topics">Term</li>
             </ul>
 
             <ul class="list__process" style="padding-top:59px">
