--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,13 @@
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
   <script src="./assets/javascripts/responsive-nav-bar.js"></script>
-  <link href="./assets/stylesheets/lightbox.min.css" rel="stylesheet" />
+  <link href="./assets/stylesheets/lightbox.min.css" rel="stylesheet"/>
   <script src="./assets/javascripts/jquery.min.js"></script>
   <script src="./assets/javascripts/lightbox.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -41,47 +42,51 @@
       <h2 class="text__h2 proj-subtitles">Still captures</h2>
       <div class="media-list">
         <div class="media-card-wrapper">
-          <a class="media-card" href="assets/images/projects/proj-img-1.png" datalightbox="proj-images">
-            <img src="./assets/images/projects/proj-img-1-thumbnail.png" />
+          <a class="media-card img-cards" href="./assets/images/projects/proj-img-1.png" data-lightbox="artworks" data-title="'Scuse me miss">
+            <img src="./assets/images/projects/proj-img-1-thumbnail.png"/>
+            <div class="text__h3">'Scuse me miss</div>
           </a>
       </div>
       <div class="media-card-wrapper">
-        <a class="media-card" href="./assets/images/projects/proj-img-2.png" datalightbox="proj-images">
-          <img src="./assets/images/projects/proj-img-2-thumbnail.png" />
+        <a class="media-card" href="./assets/images/projects/proj-img-2.png" data-lightbox="artworks" data-title="Space Dance Battle">
+          <img src="./assets/images/projects/proj-img-2-thumbnail.png"/>
         </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-3.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-3-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-3.png" data-lightbox="artworks" data-title="Abstract meets Soul">
+        <img src="./assets/images/projects/proj-img-3-thumbnail.png"/>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-4.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-4-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-4.png" data-lightbox="artworks" data-title="Boogie babies">
+        <img src="./assets/images/projects/proj-img-4-thumbnail.png"/>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-5.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-5-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-5.png" data-lightbox="artworks" data-title="Bugs Jivin' Bunny">
+        <img src="./assets/images/projects/proj-img-5-thumbnail.png"/>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-6.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-6-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-6.png" data-lightbox="artworks" data-title="Spaceship takeover">
+        <img src="./assets/images/projects/proj-img-6-thumbnail.png"/>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-7.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-7-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-7.png" data-lightbox="artworks" data-title="Abstract Meets Soul BTS">
+        <img src="./assets/images/projects/proj-img-7-thumbnail.png"/>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-8.png" datalightbox="proj-images">
-        <img src="./assets/images/projects/proj-img-8-thumbnail.png" />
+      <a class="media-card" href="./assets/images/projects/proj-img-8.png" data-lightbox="artworks" data-title="Candy Flappy Bird">
+        <img src="./assets/images/projects/proj-img-8-thumbnail.png"/>
       </a>
     </div>
   </div>
 </section>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
+  <!-- <script src="./assets/javascripts/lightbox.min.js"></script> -->
 
 <section class="img-section" style="padding-top:0px;">
   <h2 class="text__h2 proj-subtitles">Final products</h2>
