About Page changes
padding corrections++

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 
     <section class="container">
       <div class="container__sec col-xs-12 list--process">
-        <h2 class="text__h2" style="padding-right:0px"> My Skills</h2>
+        <h2 class="text__h2 list__title"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
       </div>
     </section>
