--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,28 @@
       </div>
     </section>
 
-    <section class="img-section">
-      <h2 class="text__h2 proj-subtitles">Still captures</h2>
-      <div class="media-list">
+    <section class="vid-section">
+      <!-- <h2 class="text__h1 proj-subtitles" style="padding-top:32%;">Final products</h2> -->
+      <div class="media-list" style= "padding:5%; box-shadow:none">
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <section class="img-section" style="padding-top:0%;">
+      <!-- <div class="line"></div> -->
+      <h2 class="text__h1 proj-subtitles" style="padding-top:0px;">highlights</h2>
+      <!-- <div class="line"></div> -->
+      <div class="media-list" style="box-shadow:none;">
         <div class="media-card-wrapper">
           <a class="media-card img-cards" href="./assets/images/projects/proj-img-1.png" data-lightbox="artworks" data-title="'Scuse me miss">
             <img src="./assets/images/projects/proj-img-1-thumbnail.png"/>
@@ -48,38 +67,45 @@
           </a>
       </div>
       <div class="media-card-wrapper">
-        <a class="media-card" href="./assets/images/projects/proj-img-2.png" data-lightbox="artworks" data-title="Space Dance Battle">
+        <a class="media-card img-cards" href="./assets/images/projects/proj-img-2.png" data-lightbox="artworks" data-title="Space Dance Battle">
           <img src="./assets/images/projects/proj-img-2-thumbnail.png"/>
+          <div class="text__h3">Space dance battle</div>
         </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-3.png" data-lightbox="artworks" data-title="Abstract meets Soul">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-3.png" data-lightbox="artworks" data-title="Abstract meets Soul">
         <img src="./assets/images/projects/proj-img-3-thumbnail.png"/>
+        <div class="text__h3">Abstract meets Soul</div>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-4.png" data-lightbox="artworks" data-title="Boogie babies">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-4.png" data-lightbox="artworks" data-title="Boogie babies">
         <img src="./assets/images/projects/proj-img-4-thumbnail.png"/>
+        <div class="text__h3">Boogie babies</div>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-5.png" data-lightbox="artworks" data-title="Bugs Jivin' Bunny">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-5.png" data-lightbox="artworks" data-title="Bugs Jivin' Bunny">
         <img src="./assets/images/projects/proj-img-5-thumbnail.png"/>
+        <div class="text__h3">Bugs Jivin' Bunny</div>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-6.png" data-lightbox="artworks" data-title="Spaceship takeover">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-6.png" data-lightbox="artworks" data-title="Spaceship takeover">
         <img src="./assets/images/projects/proj-img-6-thumbnail.png"/>
+        <div class="text__h3">Spaceship takeover</div>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-7.png" data-lightbox="artworks" data-title="Abstract Meets Soul BTS">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-7.png" data-lightbox="artworks" data-title="Abstract Meets Soul BTS">
         <img src="./assets/images/projects/proj-img-7-thumbnail.png"/>
+        <div class="text__h3">Abstract Meets Soul - BTS</div>
       </a>
     </div>
     <div class="media-card-wrapper">
-      <a class="media-card" href="./assets/images/projects/proj-img-8.png" data-lightbox="artworks" data-title="Candy Flappy Bird">
+      <a class="media-card img-cards" href="./assets/images/projects/proj-img-8.png" data-lightbox="artworks" data-title="Candy Flappy Bird">
         <img src="./assets/images/projects/proj-img-8-thumbnail.png"/>
+        <div class="text__h3">Candy Flappy Bird</div>
       </a>
     </div>
   </div>
@@ -88,22 +114,7 @@
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
   <!-- <script src="./assets/javascripts/lightbox.min.js"></script> -->
 
-<section class="img-section" style="padding-top:0px;">
-  <h2 class="text__h2 proj-subtitles">Final products</h2>
-  <div class="media-list" style="box-shadow:none">
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </div>
-</section>
 
 <section>
   <div class="col-xs-12" style="padding: 0%">
