Latest update - sat. 4/25/2020
To be continued...

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
   <footer class="footer">
     <a class="link footer__link disableClick" style="float:left;
-    color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+    color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
     font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
     <div class="center-block">
       <a class="link footer__link" href="#pop-ups">pop-ups</a>
       <a class="link footer__link" href="#sketches">sketches</a>
-      <a class="link footer__link" href="#process">process</a>
-      <a class="link footer__link" href="#projects">projects</a>
-      <a class="link footer__link" href="#about">about</a>
+      <a class="link footer__link" href="process.html">process</a>
+      <a class="link footer__link" href="projects.html">projects</a>
+      <a class="link footer__link" href="about.html">about</a>
     </div>
   </footer>
 </body>
