--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <a class="link topnav__link" href="#sketches">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
-    <a class="link topnav__link" href="about.html" style="color:#F25D50;">about</a>
+    <a class="link topnav__link active-btn" href="about.html">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
@@ -116,14 +116,14 @@
       <div class="col-xs-12" style="padding: 0%">
         <footer class="footer">
           <a class="link footer__link disableClick" style="float:left;
-          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+          color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
           font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
           <div class="center-block">
             <a class="link footer__link" href="#pop-ups">pop-ups</a>
             <a class="link footer__link" href="#sketches">sketches</a>
-            <a class="link footer__link" href="#process">process</a>
-            <a class="link footer__link" href="#projects">projects</a>
-            <a class="link footer__link" href="#about">about</a>
+            <a class="link footer__link" href="process.html">process</a>
+            <a class="link footer__link" href="projects.html">projects</a>
+            <a class="link footer__link active-btn" href="about.html">about</a>
           </div>
         </footer>
       </div>
