--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
           <span class="email-text">shandira.ferguson@gmail.com</span></a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
         <a class="link topnav__link" href="#sketches">sketches</a>
-        <a class="link topnav__link" href="process.html" style="color:#F25D50;">process</a>
+        <a class="link topnav__link active-btn" href="process.html">process</a>
         <a class="link topnav__link" href="projects.html">projects</a>
         <a class="link topnav__link" href="about.html">about</a>
         <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
@@ -122,14 +122,14 @@
       <div class="col-xs-12" style="padding: 0%">
       <footer class="footer">
         <a class="link footer__link disableClick" style="float:left;
-          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
-          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+        color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
+        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
         <div class="center-block">
           <a class="link footer__link" href="#pop-ups">pop-ups</a>
           <a class="link footer__link" href="#sketches">sketches</a>
-          <a class="link footer__link" href="#process">process</a>
-          <a class="link footer__link" href="#projects">projects</a>
-          <a class="link footer__link" href="#about">about</a>
+          <a class="link footer__link active-btn" href="process.html">process</a>
+          <a class="link footer__link" href="projects.html">projects</a>
+          <a class="link footer__link" href="about.html">about</a>
         </div>
       </footer>
       </div>
