New pages added
Sketches + Tour Dates pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
     <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-    <a class="link topnav__link" href="#sketches">sketches</a>
+    <a class="link topnav__link" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
     <a class="link topnav__link" href="about.html">about</a>
@@ -55,7 +55,7 @@
     font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
     <div class="center-block">
       <a class="link footer__link" href="#pop-ups">pop-ups</a>
-      <a class="link footer__link" href="#sketches">sketches</a>
+      <a class="link footer__link" href="sketches.html">sketches</a>
       <a class="link footer__link" href="process.html">process</a>
       <a class="link footer__link" href="projects.html">projects</a>
       <a class="link footer__link" href="about.html">about</a>
