--- a/process.html
+++ b/process.html
@@ -21,7 +21,7 @@
         <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
           <span class="email-text">shandira.ferguson@gmail.com</span></a>
         <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-        <a class="link topnav__link" href="#sketches">sketches</a>
+        <a class="link topnav__link" href="sketches.html">sketches</a>
         <a class="link topnav__link active-btn" href="process.html">process</a>
         <a class="link topnav__link" href="projects.html">projects</a>
         <a class="link topnav__link" href="about.html">about</a>
@@ -126,7 +126,7 @@
         font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
         <div class="center-block">
           <a class="link footer__link" href="#pop-ups">pop-ups</a>
-          <a class="link footer__link" href="#sketches">sketches</a>
+          <a class="link footer__link" href="sketches.html">sketches</a>
           <a class="link footer__link active-btn" href="process.html">process</a>
           <a class="link footer__link" href="projects.html">projects</a>
           <a class="link footer__link" href="about.html">about</a>
