--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
       <span class="email-text">shandira.ferguson@gmail.com</span></a>
       <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav__link" href="#sketches">sketches</a>
+      <a class="link topnav__link" href="sketches.html">sketches</a>
       <a class="link topnav__link" href="process.html">process</a>
       <a class="link topnav__link active-btn" href="#projects">projects</a>
       <a class="link topnav__link" href="about.html">about</a>
@@ -124,7 +124,7 @@
       font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
       <div class="center-block">
         <a class="link footer__link" href="#pop-ups">pop-ups</a>
-        <a class="link footer__link" href="#sketches">sketches</a>
+        <a class="link footer__link" href="sketches.html">sketches</a>
         <a class="link footer__link" href="process.html">process</a>
         <a class="link footer__link active-btn" href="projects.html">projects</a>
         <a class="link footer__link" href="about.html">about</a>
